# pointnet

./: .gitignore  README.md  evaluate.py  pyproject.toml  train.stderr
utils/: pc_util.py
