[tool.poetry]
name = "pointnet"
version = "0.1.0"
description = "PointNet: Deep Learning on Point Sets for 3D Classification"
authors = ["AW14Saurabh <aw14saurabh@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
tensorflow = "^1.15.4"
scipy = "^1.5.4"
Pillow = "^8.0.1"
matplotlib = "^3.3.3"
imageio = "^2.9.0"
opencv-python = "^4.4.0"
scikit-learn = "^0.23.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
